--- a/.contentful.json.sample
+++ b/.contentful.json.sample
@@ -1,4 +1,4 @@
 {
-  "spaceId": "...",
-  "accessToken": "..."
+  "spaceId": "ij6swlcejdxo",
+  "accessToken": "5jB20HTVV3W5zrn9iTr97Z-aIfIR-IdrtGN58Yc-Exo"
 }
